@@ -9,7 +9,7 @@ bin_PROGRAMS = xmp
 xmp_SOURCES = \
 	commands.c common.h getopt.h list.h getopt.c getopt1.c info.c main.c \
 	options.c read_config.c sound.c sound.h sound_file.c sound_null.c \
-	sound_wav.c terminal.c
+	sound_wav.c sound_aiff.c terminal.c
 xmp_LDADD   = ${libxmp_LIBS}
 xmp_LDFLAGS = ${XMP_DARWIN_LDFLAGS}
 
